ID-3208 ID-3243 -- fix the release build (take 13)
Change-Id: Icaff745b42983ec25df0e7a6d2a430af90c70bdc

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -64,9 +64,7 @@ define version_and_tag
 	sed -e 's/"version"[[:space:]]*:[[:space:]]*"[^"]*"/"version": "$(1)"/' package.json > package.json.tmp
 	mv package.json.tmp package.json
 	git commit -a -m $(2)
-	if [ "$(1)" -eq "$(GIT_VERSION_FINAL)" ]; then
-		git tag $(GIT_VERSION_FINAL)
-	fi
+	if [ "$(1)" -eq "$(GIT_VERSION_FINAL)" ]; then git tag $(GIT_VERSION_FINAL); fi
 	git push origin $(GIT_BRANCH):$(GIT_BRANCH)
 endef
 
