ID-3208 ID-3243 -- fix the release build (take 17)
Change-Id: Iba2ddccbb9ef583dc3b2dff6f48e904acd10ad9c

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -66,6 +66,7 @@ define version_and_tag
 	git commit -a -m $(2)
 	if [ "$(1)" = "$(GIT_VERSION_FINAL)" ]; then \
 		git tag $(GIT_VERSION_FINAL); \
+		git push origin $(GIT_VERSION_FINAL); \
 	fi
 	git push origin $(GIT_BRANCH)
 endef
