ID-3239 ID-3449 -- minor fixes to address the requirements
Change-Id: Ia3941c8f48afb0695a983fa0fd89e47501c73c9f

--- a/packages/ui-library/.eslintrc
+++ b/packages/ui-library/.eslintrc
@@ -52,7 +52,12 @@
 		"no-invalid-regexp": [2],
 		"no-irregular-whitespace": [2],
 		"no-unreachable": [2],
-		"valid-jsdoc": [1],
+		"valid-jsdoc": [
+			2,
+			{
+				"requireReturn": false
+			}
+		],
 		"valid-typeof": [2],
 		"no-unexpected-multiline": [2],
 		"max-depth": [2, 5],
