--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -15,6 +15,7 @@
     "isomorphic-fetch": "2.1.1",
     "object-assign": "4.0.1",
     "react": "0.13.3",
+    "react-colorpicker": "0.3.14",
     "react-tools": "0.13.3",
     "redux": "3.0.2",
     "superagent": "0.21.0",
