--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -16,10 +16,11 @@
     "moment": "2.9.0",
     "moment-range": "1.0.5",
     "object-assign": "4.0.1",
+    "redux": "3.0.0",
+    "redux-thunk": "1.0.0",
     "react": "0.13.3",
     "react-colorpicker": "0.3.14",
     "react-tools": "0.13.3",
-    "redux": "3.0.2",
     "superagent": "0.21.0",
     "underscore": "1.8.3",
     "underscore.string": "3.2.2"
