--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -34,6 +34,7 @@
     "browserify": "11.0.1",
     "clean-webpack-plugin": "0.1.3",
     "css-loader": "0.16.0",
+    "escope": "3.3.0",
     "eslint": "1.6.0",
     "eslint-loader": "1.1.0",
     "eslint-plugin-react": "3.5.1",
@@ -44,6 +45,7 @@
     "jsdoc": "3.3.3",
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.3",
+    "node-sass": "3.3.3",
     "react-dnd": "1.1.8",
     "react-hot-loader": "1.3.0",
     "reactify": "1.1.1",
