--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -47,7 +47,8 @@
     "url-loader": "0.5.6",
     "webpack": "1.12.2",
     "webpack-babel-jest": "1.0.2",
-    "webpack-dev-server": "1.12.0"
+    "webpack-dev-server": "1.12.0",
+    "marked": "0.3.5"
   },
   "peerDependencies": {
     "react": "0.13.3",
