ID-4555 -- add support for transforming the library files in WP/CDP
Change-Id: I22501cb9518c8caa6c8de20eb0a70b87f46c268a

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -98,5 +98,13 @@
     "jest": "jest && node ./clean-after.js",
     "test": "jest",
     "verify": "npm run lint && npm run test"
+  },
+  "browserify": {
+    "transform": [[
+        "babelify",
+        {
+            "presets": ["react"]
+        }
+    ]]
   }
 }
