--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -38,7 +38,7 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "html-webpack-plugin": "2.9.0",
-    "jest-cli": "0.8.2",
+    "jest-cli": "0.10.0",
     "jsdoc": "3.3.3",
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.4",
@@ -70,7 +70,7 @@
   },
   "jest": {
     "rootDir": "./",
-    "testRunner": "<rootDir>/node_modules/jest-cli/src/testRunners/jasmine/jasmine1",
+    "testRunner": "jasmine1",
     "scriptPreprocessor": "<rootDir>/jest/preprocessor.js",
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules",
@@ -90,7 +90,9 @@
       "/dist/"
     ],
     "modulePathIgnorePatterns": [
-      "/node/"
+      "/node/",
+      "/build/",
+      "/dist/"
     ]
   },
   "scripts": {
