--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -96,7 +96,7 @@
     ]
   },
   "scripts": {
-    "pack": "npm run doc && webpack --progress --colors --config webpack.config.js",
+    "pack": "webpack --progress --colors --config webpack.config.js",
     "webpack-start": "webpack-dev-server -d --hot --inline --progress --colors --config webpack.dev.config.js",
     "start": "npm run doc && npm run webpack-start",
     "doc": "jsdoc -c ./jsdoc.json",
