--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -29,6 +29,7 @@
     "babel-eslint": "4.1.8",
     "babel-loader": "6.2.1",
     "babel-preset-react": "6.3.13",
+    "chalk": "1.1.3",
     "clean-webpack-plugin": "0.1.8",
     "clone": "1.0.2",
     "copy-webpack-plugin": "1.1.1",
@@ -43,6 +44,7 @@
     "jsdoc": "3.3.3",
     "jsdoc-jsx": "0.1.0",
     "json-loader": "0.5.4",
+    "lcov-parse": "0.0.10",
     "marked": "0.3.5",
     "node-sass": "3.4.2",
     "process": "0.11.2",
@@ -59,6 +61,7 @@
     "rimraf": "2.5.2",
     "sass-loader": "3.1.2",
     "style-loader": "0.13.0",
+    "tty-table": "1.0.7",
     "url-loader": "0.5.7",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1"
