--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "6.2.1",
     "babel-preset-react": "6.3.13",
     "clean-webpack-plugin": "0.1.8",
+    "clone": "1.0.2",
     "copy-webpack-plugin": "1.1.1",
     "css-loader": "0.23.1",
     "eslint": "1.10.3",
@@ -54,6 +55,7 @@
     "react-router-redux": "4.0.2",
     "redux": "3.0.5",
     "redux-thunk": "1.0.0",
+    "reselect": "2.5.1",
     "rimraf": "2.5.2",
     "sass-loader": "3.1.2",
     "style-loader": "0.13.0",
@@ -62,6 +64,11 @@
     "webpack-dev-server": "1.14.1"
   },
   "peerDependencies": {
+    "clone": "1.x",
+    "reselect": "2.x",
+    "react-redux": "4.x",
+    "react-router": "2.x",
+    "react-router-redux": "4.x",
     "react": "0.13 - 0.14",
     "react-dom": "0.14",
     "redux": "3.x",
