--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -66,7 +66,7 @@ endif
 # get the version number of the next SNAPSHOT
 GIT_VERSION_NEXT=$(GIT_VERSION_MAJOR).$(GIT_VERSION_MINOR_NEXT).$(GIT_VERSION_PATCH_NEXT)-SNAPSHOT
 
-ifeq ($(GIT_BRANCH),"master")
+ifeq ($(GIT_BRANCH),master)
 	PACKAGE_VERSION=$(GIT_VERSION)
 	PACKAGE_VERSION_FINAL=$(GIT_VERSION_FINAL)
 	PACKAGE_VERSION_NEXT=$(GIT_VERSION_NEXT)
