UIP-58 -- disabling the coverage verification temporarly
Change-Id: I06bf8349cfbb9e4b3565a81a30c6d2a4b3d9e40e

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -87,9 +87,9 @@ ifneq ($(COVERAGE_STATUS_CODE),200)
 	COVERAGE_VERSION=$(GIT_VERSION)
 	COVERAGE_STATUS_CODE=$(shell curl -s -I http://art01.corp.pingidentity.com:8080/artifactory/simple/inhouse/com/pingone/ui-library/ui-library-coverage/$(COVERAGE_VERSION)/ui-library-coverage-$(COVERAGE_VERSION).tar.gz | grep "HTTP/1.1" | awk {'print $$2'})
 endif
-ifneq ($(COVERAGE_STATUS_CODE),200)
-$(error Cannot find the coverage report to download)
-endif
+# ifneq ($(COVERAGE_STATUS_CODE),200)
+# $(error Cannot find the coverage report to download)
+# endif
 
 
 define version_and_tag
