UIP-161: Added a utility file which clones React and extends the clone so that provides a way to define which properties affect rendering. It then wraps shouldComponentUpdate (if it exists), in a function which will examine the before/after props that are decorated with .affectsRendering to determine if the component needs to update or not.
Change-Id: Id14474ddc55fd77fb6f15bec069ece3de87d6fd6

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -88,7 +88,8 @@
     "unmockedModulePathPatterns": [
       "<rootDir>/node_modules",
       "<rootDir>/src/testutil/TestUtils.js",
-      "<rootDir>/src/util/ReduxTestUtils.js"
+      "<rootDir>/src/util/ReduxTestUtils.js",
+      "<rootDir>/src/util/ReactWithDefaultMethods.js"
     ],
     "testDirectoryName": "tests",
     "testFileExtensions": [
