UIP-736 Fix package.json and wdio.conf.js to make it ready for ITs Remove kill line in Makefile because when build success, that kill command will fail the build because it cannot find any process to kill. Change-Id: Iaad91bf1089d4059e62666924f69ec4ac51e04b2

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -75,6 +75,7 @@
     "validator": "5.2.0 ",
     "wdio": "0.3.1",
     "wdio-jasmine-framework": "0.2.1",
+    "wdio-junit-reporter": "0.1.0",
     "webdriverio": "4.0.9",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1"
