UIP-813 refine stylelint rules rename config file so that it works with CSS editor apply stylelint fixes
Change-Id: If5f37d7f3661275674ba443aa0a3e052c77c09f8

--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -129,7 +129,7 @@
     "start": "npm run doc && npm run webpack-start",
     "doc": "jsdoc -c ./jsdoc.json",
     "jslint": "eslint --ext .js,.jsx .",
-    "stylelint": "stylelint --syntax scss ./src/**/*.scss --config ./style-lint-config.json",
+    "stylelint": "stylelint --syntax scss ./src/**/*.scss --config ./.stylelintrc",
     "jest": "jest && node ./clean-after.js",
     "coverage": "jest --coverage && node ./clean-after.js",
     "test": "jest",
