--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -123,6 +123,8 @@
   },
   "scripts": {
     "pack": "webpack --progress --colors --config webpack.config.js",
+    "pack-landing": "webpack --progress --colors --config webpack.landing.config.js",
+    "webpack-start-landing": "webpack-dev-server --content-base hosting/ -d --hot --port 8082 --host 0.0.0.0 --inline --progress --colors --config webpack.landing.config.js",
     "webpack-start": "webpack-dev-server -d --hot --host 0.0.0.0 --inline --progress --colors --config webpack.dev.config.js",
     "start": "npm run doc && npm run webpack-start",
     "doc": "jsdoc -c ./jsdoc.json",
