--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -22,7 +22,8 @@
     "ping-react-color-picker": "3.1.3",
     "re-mutable": "1.1.1",
     "re-react": "1.1.5",
-    "react-dnd": "1.1.8",
+    "react-dnd": "2.1.4",
+    "react-dnd-html5-backend": "2.1.2",
     "superagent": "0.21.0",
     "underscore": "1.8.3",
     "underscore.string": "3.2.2"
