--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -19,7 +19,7 @@
     "moment": "2.11.1",
     "moment-range": "1.0.5",
     "object-assign": "4.0.1",
-    "react-color-picker": "4.0.1",
+    "ping-react-color-picker": "3.1.3",
     "re-mutable": "1.1.1",
     "re-react": "1.1.5",
     "react-dnd": "2.1.4",
