--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -58,6 +58,7 @@
     "q": "1.4.1",
     "react": "0.14.6",
     "react-addons-test-utils": "0.14.6",
+    "react-dnd-test-backend": "^1.0.2",
     "react-dom": "0.14.6",
     "react-hot-loader": "1.3.0",
     "react-redux": "4.4.5",
@@ -70,8 +71,8 @@
     "sass-loader": "3.1.2",
     "selenium-standalone": "5.1.0",
     "style-loader": "0.13.0",
-    "stylelint-config-standard": "11.0.0",
     "stylelint": "7.0.2",
+    "stylelint-config-standard": "11.0.0",
     "tty-table": "1.0.7",
     "url-loader": "0.5.7",
     "validator": "5.2.0 ",
