UIP-1009 -- export the release version # to be used by Jenkins in the email notification
Change-Id: I1d3587bfc62c086e4c8ef5530eb30acefa4c7112

--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -244,7 +244,9 @@ dist: install-mvn install-node-npm
 	$(call package,$(PACKAGE_VERSION_FINAL))
 	$(call deploy,$(PACKAGE_VERSION_FINAL))
 
-	$(call version_and_tag,$(GIT_VERSION_NEXT),"Prepare for the next release cycle")
+	@echo "UI_LIBRARY_FINAL_VERSION=$(PACKAGE_VERSION_FINAL)\nUI_LIBRARY_SNAPSHOT_VERSION=$(PACKAGE_VERSION_NEXT)" > version
+
+	$(call version_and_tag,$(PACKAGE_VERSION_NEXT),"Prepare for the next release cycle")
 	$(call package,$(PACKAGE_VERSION_NEXT))
 	$(call deploy,$(PACKAGE_VERSION_NEXT))
 
