--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -18,7 +18,7 @@
     "isomorphic-fetch": "2.1.1",
     "moment": "2.11.1",
     "moment-range": "1.0.5",
-    "moment-timezone": "^0.5.5",
+    "moment-timezone": "0.5.5",
     "object-assign": "4.0.1",
     "ping-react-color-picker": "3.1.3",
     "re-mutable": "1.1.1",
