--- a/packages/ui-library/Makefile
+++ b/packages/ui-library/Makefile
@@ -244,7 +244,8 @@ dist: install-mvn install-node-npm
 	$(call package,$(PACKAGE_VERSION_FINAL))
 	$(call deploy,$(PACKAGE_VERSION_FINAL))
 
-	@echo "UI_LIBRARY_FINAL_VERSION=$(PACKAGE_VERSION_FINAL)\nUI_LIBRARY_SNAPSHOT_VERSION=$(PACKAGE_VERSION_NEXT)" > version
+	@echo "UI_LIBRARY_FINAL_VERSION=$(PACKAGE_VERSION_FINAL)" >> version
+	@echo "UI_LIBRARY_SNAPSHOT_VERSION=$(PACKAGE_VERSION_NEXT)" >> version
 
 	$(call version_and_tag,$(PACKAGE_VERSION_NEXT),"Prepare for the next release cycle")
 	$(call package,$(PACKAGE_VERSION_NEXT))
