--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -27,7 +27,8 @@
     "react-dnd-html5-backend": "2.1.2",
     "superagent": "0.21.0",
     "underscore": "1.8.3",
-    "underscore.string": "3.2.2"
+    "underscore.string": "3.2.2",
+    "uuid": "2.0.3"
   },
   "devDependencies": {
     "babel-core": "6.4.0",
@@ -75,7 +76,6 @@
     "stylelint-config-standard": "11.0.0",
     "tty-table": "1.0.7",
     "url-loader": "0.5.7",
-    "uuid": "2.0.3",
     "validator": "5.2.0 ",
     "wdio": "0.3.1",
     "wdio-jasmine-framework": "0.2.5",
